分离多方块接口，清理代码