@@ -48,7 +48,7 @@ public class GrassPathBehavior implements IToolBehavior {
                 blocks = List.of(pos);
             } else {
                 blocks = getPathConvertibleBlocks(aoeDefinition, context);
-                blocks.add(0, context.getClickedPos());
+                blocks.addFirst(context.getClickedPos());
             }
         } else {
             return InteractionResult.PASS;
@@ -67,7 +67,7 @@ public class GrassPathBehavior implements IToolBehavior {
         }
 
         if (pathed) {
-            level.playSound(player, blocks.get(0), SoundEvents.SHOVEL_FLATTEN, SoundSource.BLOCKS, 1.0F, 1.0F);
+            level.playSound(player, blocks.getFirst(), SoundEvents.SHOVEL_FLATTEN, SoundSource.BLOCKS, 1.0F, 1.0F);
             return InteractionResult.sidedSuccess(level.isClientSide);
         }
         return InteractionResult.PASS;
