@@ -54,7 +54,7 @@ public class HoeGroundBehavior implements IToolBehavior {
                 blocks = List.of(pos);
             } else {
                 blocks = getTillableBlocks(aoeDefinition, context);
-                blocks.add(0, context.getClickedPos());
+                blocks.addFirst(context.getClickedPos());
             }
         } else {
             return InteractionResult.PASS;
@@ -71,7 +71,7 @@ public class HoeGroundBehavior implements IToolBehavior {
         }
 
         if (tilled) {
-            level.playSound(player, blocks.get(0), SoundEvents.HOE_TILL, SoundSource.BLOCKS, 1.0F, 1.0F);
+            level.playSound(player, blocks.getFirst(), SoundEvents.HOE_TILL, SoundSource.BLOCKS, 1.0F, 1.0F);
             return InteractionResult.sidedSuccess(level.isClientSide);
         }
         return InteractionResult.PASS;
