@@ -8,6 +8,7 @@ import com.gregtechceu.gtceu.api.capability.recipe.ItemRecipeCapability;
 import com.gregtechceu.gtceu.api.capability.recipe.RecipeCapability;
 import com.gregtechceu.gtceu.api.machine.feature.IRecipeLogicMachine;
 import com.gregtechceu.gtceu.api.machine.feature.multiblock.IMultiPart;
+import com.gregtechceu.gtceu.api.machine.feature.multiblock.IWorkableMultiPart;
 import com.gregtechceu.gtceu.api.machine.multiblock.PartAbility;
 import com.gregtechceu.gtceu.api.machine.multiblock.WorkableElectricMultiblockMachine;
 import com.gregtechceu.gtceu.api.machine.trait.NotifiableFluidTank;
@@ -25,9 +26,7 @@ import net.minecraftforge.fluids.capability.IFluidHandler;
 import net.minecraftforge.fluids.capability.IFluidHandler.FluidAction;
 import net.minecraftforge.fluids.capability.templates.VoidFluidHandler;
 
-import it.unimi.dsi.fastutil.objects.ObjectArrayList;
 import lombok.Getter;
-import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
@@ -65,7 +64,7 @@ public class DistillationTowerMachine extends WorkableElectricMultiblockMachine 
     }
 
     @Override
-    public @NotNull DistillationTowerLogic getRecipeLogic() {
+    public DistillationTowerLogic getRecipeLogic() {
         return (DistillationTowerLogic) super.getRecipeLogic();
     }
 
@@ -78,11 +77,11 @@ public class DistillationTowerMachine extends WorkableElectricMultiblockMachine 
     public void onStructureFormed() {
         super.onStructureFormed();
         final int startY = getPos().getY() + yOffset;
-        List<IMultiPart> parts = Arrays.stream(getParts()).filter(part -> PartAbility.EXPORT_FLUIDS.isApplicable(part.self().getBlockState().getBlock())).filter(part -> part.self().getPos().getY() >= startY).toList();
+        List<IWorkableMultiPart> parts = Arrays.stream(getParts()).filter(IWorkableMultiPart.class::isInstance).map(IWorkableMultiPart.class::cast).filter(part -> PartAbility.EXPORT_FLUIDS.isApplicable(part.self().getBlockState().getBlock())).filter(part -> part.self().getPos().getY() >= startY).toList();
         if (!parts.isEmpty()) {
             // Loop from controller y + offset -> the highest output hatch
-            int maxY = parts.get(parts.size() - 1).self().getPos().getY();
-            fluidOutputs = new ObjectArrayList<>(maxY - startY);
+            int maxY = parts.getLast().self().getPos().getY();
+            fluidOutputs = new ArrayList<>(maxY - startY);
             int outputIndex = 0;
             for (int y = startY; y <= maxY; ++y) {
                 if (parts.size() <= outputIndex) {
@@ -91,7 +90,7 @@ public class DistillationTowerMachine extends WorkableElectricMultiblockMachine 
                 }
                 var part = parts.get(outputIndex);
                 if (part.self().getPos().getY() == y) {
-                    var handler = part.getRecipeHandlers().get(0).getCapability(FluidRecipeCapability.CAP).stream().filter(IFluidHandler.class::isInstance).findFirst().map(IFluidHandler.class::cast).orElse(VoidFluidHandler.INSTANCE);
+                    var handler = part.getRecipeHandlers().getFirst().getCapability(FluidRecipeCapability.CAP).stream().filter(IFluidHandler.class::isInstance).findFirst().map(IFluidHandler.class::cast).orElse(VoidFluidHandler.INSTANCE);
                     addOutput(handler);
                     outputIndex++;
                 } else if (part.self().getPos().getY() > y) {
@@ -131,7 +130,6 @@ public class DistillationTowerMachine extends WorkableElectricMultiblockMachine 
             super(machine);
         }
 
-        @NotNull
         @Override
         public DistillationTowerMachine getMachine() {
             return (DistillationTowerMachine) super.getMachine();
@@ -177,7 +175,7 @@ public class DistillationTowerMachine extends WorkableElectricMultiblockMachine 
             this.workingRecipe = recipe.copy();
             var contents = recipe.getOutputContents(FluidRecipeCapability.CAP);
             var outputs = getMachine().getFluidOutputs();
-            List<Content> trimmed = new ObjectArrayList<>(12);
+            List<Content> trimmed = new ArrayList<>(12);
             for (int i = 0; i < Math.min(contents.size(), outputs.size()); ++i) {
                 if (!(outputs.get(i) instanceof VoidFluidHandler)) trimmed.add(contents.get(i));
             }
@@ -211,7 +209,7 @@ public class DistillationTowerMachine extends WorkableElectricMultiblockMachine 
             var fluids = recipe.getOutputContents(FluidRecipeCapability.CAP).stream().map(Content::getContent).map(FluidRecipeCapability.CAP::of).toList();
             // Distillery recipes should output to the first non-void handler
             if (recipe.recipeType == GTRecipeTypes.DISTILLERY_RECIPES) {
-                var fluid = fluids.get(0).getStacks()[0];
+                var fluid = fluids.getFirst().getStacks()[0];
                 var handler = getMachine().getFirstValid();
                 if (handler == null) return false;
                 int filled = (handler instanceof NotifiableFluidTank nft) ? nft.fillInternal(fluid, action) : handler.fill(fluid, action);
