@@ -15,7 +15,6 @@ import net.minecraft.MethodsReturnNonnullByDefault;
 import net.minecraft.world.item.ItemStack;
 
 import lombok.Getter;
-import org.jetbrains.annotations.NotNull;
 
 import java.util.Collections;
 
@@ -38,7 +37,7 @@ public class ResearchStationMachine extends WorkableElectricMultiblockMachine {
     }
 
     @Override
-    public @NotNull ResearchStationRecipeLogic getRecipeLogic() {
+    public ResearchStationRecipeLogic getRecipeLogic() {
         return (ResearchStationRecipeLogic) super.getRecipeLogic();
     }
 
@@ -98,7 +97,6 @@ public class ResearchStationMachine extends WorkableElectricMultiblockMachine {
             super(metaTileEntity);
         }
 
-        @NotNull
         @Override
         public ResearchStationMachine getMachine() {
             return (ResearchStationMachine) super.getMachine();
@@ -145,7 +143,7 @@ public class ResearchStationMachine extends WorkableElectricMultiblockMachine {
             ItemStack outputItem = ItemStack.EMPTY;
             var contents = lastRecipe.getOutputContents(ItemRecipeCapability.CAP);
             if (!contents.isEmpty()) {
-                outputItem = ItemRecipeCapability.CAP.of(contents.get(0).content).getItems()[0];
+                outputItem = ItemRecipeCapability.CAP.of(contents.getFirst().content).getItems()[0];
             }
             if (!outputItem.isEmpty()) {
                 holder.setDataItem(outputItem);
